# tezedge_redux

./: Cargo.toml  README.md
src/: action.rs  config.rs  dns.rs  effects.rs  event.rs  main.rs  mio_service.rs  persistent_storage.rs  reducer.rs  state.rs
src/io_error_kind/: io_error_kind.rs  serde.rs
src/peer/: mod.rs  peer_actions.rs  peer_effects.rs  peer_state.rs
src/peer/connecting/: mod.rs  peer_connecting_actions.rs  peer_connecting_effects.rs  peer_connecting_reducer.rs  peer_connecting_state.rs
src/peer/connection/outgoing/: peer_connection_outgoing_effects.rs  peer_connection_outgoing_reducer.rs  peer_connection_outgoing_state.rs
src/peer/disconnection/: peer_disconnection_effects.rs  peer_disconnection_reducer.rs
src/peer/handshaking/: mod.rs  peer_handshaking_actions.rs  peer_handshaking_effects.rs  peer_handshaking_reducer.rs  peer_handshaking_state.rs
src/peer/handshaking/connection_message/read/: peer_connection_message_read_actions.rs  peer_connection_message_read_effects.rs  peer_connection_message_read_reducer.rs
src/peer/handshaking/connection_message/write/: peer_connection_message_write_actions.rs  peer_connection_message_write_effects.rs  peer_connection_message_write_reducer.rs
src/peers/: mod.rs
src/peers/dns_lookup/: mod.rs  peers_dns_lookup_actions.rs  peers_dns_lookup_effects.rs  peers_dns_lookup_reducer.rs  peers_dns_lookup_service.rs  peers_dns_lookup_state.rs
src/peers/remove/: peers_remove_reducer.rs
src/request/: pending_requests.rs  request_id.rs
src/rpc/: rpc_effects.rs
src/service/: mio_service.rs  mod.rs  randomness_service.rs  rpc_service.rs  service_channel.rs  storage_service.rs
src/storage/: mod.rs  storage_block_headers_put_actions.rs  storage_block_headers_put_effects.rs  storage_block_headers_put_reducer.rs  storage_request_actions.rs  storage_request_effects.rs  storage_request_reducer.rs  storage_state.rs
src/storage/request/: storage_request_effects.rs
src/storage/state_snapshot/put/: mod.rs  storage_state_snapshot_put_actions.rs  storage_state_snapshot_put_effects.rs
src/tmp/: persistent_storage.rs
