[package]
name = "tezedge_redux"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-lookup = "1.0.1"
derive_more = "0.99.16"
redux-rs = { git = "https://github.com/binier/redux-rs.git" }

crypto = { git = "https://github.com/binier/tezedge.git", branch = "p2p-simulator-refactor" }
tezos_encoding = { git = "https://github.com/binier/tezedge.git", branch = "p2p-simulator-refactor" }
tezos_identity = { git = "https://github.com/binier/tezedge.git", branch = "p2p-simulator-refactor" }
tezos_messages = { git = "https://github.com/binier/tezedge.git", branch = "p2p-simulator-refactor" }
shell_proposer = { git = "https://github.com/binier/tezedge.git", branch = "p2p-simulator-refactor" }
shell_state = { git = "https://github.com/binier/tezedge.git", branch = "p2p-simulator-refactor" }
