[package]
name = "tezedge_redux"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
hex = "0.4"
slab = { version = "0.4.3", features = ["serde"] }
rand = "0.7.3"
mio = { version = "0.7.13", features = ["os-poll", "net"] }
dns-lookup = "1.0.1"
derive_more = "0.99.16"
tokio = { version = "1.8", features = ["time", "rt-multi-thread"] }
hyper = { version = "0.14", features = ["server", "http1", "http2", "stream", "tcp", "runtime"] }

bincode = "1.3"
derive_builder = "0.9"
failure = "0.1"
getset = "0.1"
itertools = "0.10"
num_cpus = "1.13"
rocksdb = {version = "0.17", features = ["snappy", "lz4", "zstd", "zlib"], default-features = false }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_debug"] }
sled = "0.34.6"
strum = "0.20"
strum_macros = "0.20"
zstd = "0.5.3+zstd.1.4.5"

redux-rs = { git = "https://github.com/binier/redux-rs.git", features = ["serde"] }

crypto = { git = "https://github.com/binier/tezedge.git", branch = "p2p-simulator-refactor" }
tezos_encoding = { git = "https://github.com/binier/tezedge.git", branch = "p2p-simulator-refactor" }
tezos_identity = { git = "https://github.com/binier/tezedge.git", branch = "p2p-simulator-refactor" }
tezos_messages = { git = "https://github.com/binier/tezedge.git", branch = "p2p-simulator-refactor" }
storage = { git = "https://github.com/binier/tezedge.git", branch = "p2p-simulator-refactor" }

[patch.crates-io]
ocaml-boxroot-sys = { git = "https://gitlab.com/bruno.deferrari/ocaml-boxroot.git", branch = "ocaml-410-headers" }
librocksdb-sys = { git = "https://github.com/tezedge/rust-rocksdb.git", tag = "tezedge-v0.17.0-1" }
